# Panokeet

./: .gitignore  CLAUDE.md  README.md  SETUP.md  app.py  com.panokeet.whisper-dictate.plist  debug_keys.py  dictate.py  install.sh  karabiner_rule.md  key_profiler.py  panokeet.py  panokeet_app.py  panokeet_final.py  panokeet_v2.py  panokeet_v3.py  popup.py  pyproject.toml  recorder.py  request_permission.py  setup.py  setup.sh  simple_test.py  start.sh  test_local_keys.py  test_menubar.py  test_permissions.py  test_record.py  transcriber.py
PanokeetUI/: project.yml
PanokeetUI/PanokeetUI/: APIClient.swift  FloatingPanel.swift  Info.plist  PanokeetUIApp.swift  TranscriptView.swift
PanokeetUI/PanokeetUI.xcodeproj/: project.pbxproj
PanokeetUI/PanokeetUI/Assets.xcassets/active.imageset/: Contents.json
PanokeetUI/PanokeetUI/Assets.xcassets/idle.imageset/: Contents.json
backend/: server.py
logo-viewer/: editor.html  server.py
